[package]
name = "zero-copy"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "zero_copy"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
test-bpf = []

[dependencies]
anchor-lang = "0.20.1"

[dev-dependencies]
bytemuck = "1.4.0"
solana-program-test = "1.8.0"
